--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ charset-normalizer==2.0.4
 click==8.0.1
 colorama==0.4.4
 cycler==0.10.0
-dataclasses==0.8
+dataclasses
 distlib==0.3.2
 filelock==3.0.12
 Flask==2.0.1
